# clarix-digital-signage-system

./: .gitignore  README.md  Task.md  admin_users.example.txt  eslint.config.mjs  next.config.ts  package-lock.json  package.json  prd.md  role_permissions.example.txt  tailwind.config.js  testing_guide.md  tsconfig.json
.commandcode/taste/: taste.md
docs/: offline-router-setup.md
outputs/truck-import-sample/: build_fake_truck_import.mjs  fake_truck_import.xlsx  fake_truck_import.xlsx.inspect.ndjson  node_modules
public/: port.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  security.rs
src-tauri/src/commands/: analytics.rs  app_config.rs  auth.rs  content.rs  database.rs  lan.rs  mod.rs  network.rs  playlists.rs  production.rs  schedule.rs  screens.rs  trucks.rs
src-tauri/src/db/: mod.rs
src-tauri/src/lan/: mod.rs  server.rs
src-tauri/src/scheduler/: mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AppLayoutWrapper.tsx  ContentCard.tsx  Modal.tsx  ModuleScreenManager.tsx  PlaylistEditor.tsx  ScheduleTimeline.tsx  ScreenCard.tsx  SettingsSection.tsx  Sidebar.tsx  StatCard.tsx  Toast.tsx  TruckQueueTable.tsx  TruckTokenDisplay.tsx
src/hooks/: useAnalytics.ts  useContent.ts  usePeers.ts  usePermissions.ts  usePlaylists.ts  useSchedule.ts  useScreens.ts  useTrucks.ts
src/lib/: branding.ts  gate-binding.ts  production.ts  signage-schedule.ts  tauri.ts  truck-alerts.ts  truck-queue.ts  types.ts  utils.ts
src/store/: authStore.ts  gateStore.ts  truckStore.ts  trucks.ts  ui.ts
(+28 files in other folders)
