[package]
name = "signalos"
version = "0.1.0"
description = "SignalOS — Digital Signage Management Desktop App"
authors = ["SignalOS Team"]
edition = "2021"

[lib]
name = "signalos_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Tauri core
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time & scheduling
chrono = { version = "0.4", features = ["serde"] }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }

# LAN discovery
mdns-sd = "0.11"
local-ip-address = "0.6"
gethostname = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
sha2 = "0.10"
futures-util = "0.3"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
